--- a/paper.bib
+++ b/paper.bib
@@ -34,20 +34,20 @@ url="https://doi.org/10.1186/1751-0473-8-7"
 
 @MISC{Boettiger2018,
 author = "Carl Boettiger",
-url = {https://ropensci.github.io/piggyback/articles/alternatives.html},
-canonicaluri = {\url{https://ropensci.github.io/piggyback/articles/alternatives.html}},
+url = {https://docs.ropensci.org/piggyback/articles/alternatives.html},
+canonicaluri = {\url{https://docs.ropensci.org/piggyback/articles/alternatives.html}},
 title = {Piggyback comparison to alternatives},
 year = {2018},
-archived = {http://greycite.knowledgeblog.org/?uri=https%3A%2F%2Fropensci.github.io%2Fpiggyback%2Farticles%2Falternatives.html},
+archived = {http://greycite.knowledgeblog.org/?uri=https%3A%2F%2Fdocs.ropensci.org%2Fpiggyback%2Farticles%2Falternatives.html},
 }
 
 
 @MISC{Boettiger2018b,
 author = "Carl Boettiger",
-url = {https://ropensci.github.io/piggyback/articles/intro.html},
-canonicaluri = {\url{https://ropensci.github.io/piggyback/articles/intro.html}},
+url = {https://docs.ropensci.org/piggyback/articles/intro.html},
+canonicaluri = {\url{https://docs.ropensci.org/piggyback/articles/intro.html}},
 title = {{Piggyback Data atop your GitHub Repository!}},
 year = {2018},
-archived = {http://greycite.knowledgeblog.org/?uri=https%3A%2F%2Fropensci.github.io%2Fpiggyback%2Farticles%2Fintro.html},
+archived = {http://greycite.knowledgeblog.org/?uri=https%3A%2F%2Fdocs.ropensci.org%2Fpiggyback%2Farticles%2Fintro.html},
 }
 
