--- a/vignettes/intro.Rmd
+++ b/vignettes/intro.Rmd
@@ -96,8 +96,6 @@ pb_download_url("data/mtcars.tsv.gz",
                 tag = "v0.0.1") 
 ```
 
-
-
 ## Uploading data
 
 If your GitHub repository doesn't have any [releases](https://docs.github.com/en/github/administering-a-repository/managing-releases-in-a-repository) yet, `piggyback` will help you quickly create one.  Create new releases to manage multiple versions of a given data file. While you can create releases as often as you like, making a new release is by no means necessary each time you upload a file.  If maintaining old versions of the data is not useful, you can stick with a single release and upload all of your data there.  
@@ -163,11 +161,9 @@ Similarly, you can download all current data assets of the latest or specified r
 
 To reduce API calls to GitHub, piggyback caches most calls with a timeout of 1 second by default.  This avoids repeating identical requests to update it's internal record of the repository data (releases, assets, timestamps, etc) during programmatic use.  You can increase or decrease this delay by setting the environmental variable in seconds, e.g. `Sys.setenv("piggyback_cache_duration"=10)` for a longer delay or `Sys.setenv("piggyback_cache_duration"=0)` to disable caching. 
 
+## Valid file names
 
-## Path names
-
-GitHub assets attached to a release do not support file paths, and will convert most special characters (`#`, `%`, etc) to `.` or throw an error (e.g. for file names containing `$`, `@`, `/`).  To preserve path information on uploading data, `piggyback` uses relative paths (relative to the working directory) in data file names, and encodes the system path delimiter as `.2f` (`%2f` is the HTML encoding of a literal `/`, but `%` cannot be used in asset names).  `piggyback` functions will always show and use the decoded file names, e.g. `data/mtcars.csv`, but you'll see `data.2fmtcars.csv` if you look at the release attachment on GitHub.
-
+GitHub assets attached to a release do not support file paths, and will convert most special characters (`#`, `%`, etc) to `.` or throw an error (e.g. for file names containing `$`, `@`, `/`). piggyback will default to using the base name of the file only (i.e. will only use `"mtcars.csv"` if provided a file path like `"data/mtcars.csv"`)
 
 ## A Note on GitHub Releases vs Data Archiving
 
@@ -175,18 +171,10 @@ GitHub assets attached to a release do not support file paths, and will convert 
 
 Permanent, published data should always be archived in a proper data repository with a DOI, such as [zenodo.org](https://zenodo.org). Zenodo can freely archive public research data files up to 50 GB in size, and data is strictly versioned (once released, a DOI always refers to the same version of the data, new releases are given new DOIs). `piggyback` is meant only to lower the friction of working with data during the research process.  (e.g. provide data accessible to collaborators or continuous integration systems during research process, including for private repositories.)
 
-
-
 ## What will GitHub think of this?
 
 [GitHub documentation](https://docs.github.com/en/github/managing-large-files/distributing-large-binaries) at the time of writing endorses the use of attachments to releases as a solution for distributing large files as part of your project:
 
 ![](https://github.com/ropensci/piggyback/raw/83776863b34bb1c9962154608a5af41867a0622f/man/figures/github-policy.png)
 
-
 Of course, it will be up to GitHub to decide if this use of release attachments is acceptable in the long term. 
-
-
-
-
-
