update git auth instructions in vignette

--- a/vignettes/intro.Rmd
+++ b/vignettes/intro.Rmd
@@ -51,11 +51,12 @@ No authentication is required to download data from *public* GitHub repositories
 To do so, add your [GitHub Token](https://github.com/settings/tokens/new?scopes=repo,gist&description=R:GITHUB_PAT) to an environmental variable, e.g. in a `.Renviron` file in your home directory or project directory (any private place you won't upload), see `usethis::edit_r_environ()`.  For one-off use you can also set your token from the R console using:
 
 ```r
-Sys.setenv(GITHUB_TOKEN="xxxxxx")
+Sys.setenv(GITHUB_PAT="xxxxxx")
 ```
 
-But try to avoid putting `Sys.setenv()` in  any R scripts -- remember, the goal here is to avoid writing your private token in any file that might be shared, even privately.   For more help setting up a GitHub token, for the first time, see `usethis::browse_github_pat()`.
+But try to avoid putting `Sys.setenv()` in  any R scripts -- remember, the goal here is to avoid writing your private token in any file that might be shared, even privately.
 
+For more information, please see the [usethis guide to GitHub credentials](https://usethis.r-lib.org/articles/git-credentials.html)
 
 ## Downloading data
 
