--- a/vignettes/alternatives.Rmd
+++ b/vignettes/alternatives.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Piggyback comparison to alternatives"
 author: "Carl Boettiger"
-date: "`r Sys.Date()`"
+date: "2018-09-18"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{alternatives}
