README note on authentication

--- a/README.Rmd
+++ b/README.Rmd
@@ -65,7 +65,10 @@ fs::dir_tree(tempdir())
 #> /tmp/RtmpWxJSZj
 #> └── iris2.tsv.gz
 ```
-Downloading from private repos or uploading to any repo requires
+Downloading from private repos or uploading to any repo requires authentication, 
+specifically a GitHub Personal Access Token (PAT). This can be stored as a
+[gh::gh_token()](https://usethis.r-lib.org/articles/git-credentials.html#get-a-personal-access-token-pat)
+or a GITHUB_PAT environment variable - for more information, see the vignette notes on
 [authentication](https://docs.ropensci.org/piggyback/articles/piggyback.html#authentication).
 
 We can also upload data to a release. Start by creating a release:
