--- a/vignettes/cloud_native.Rmd
+++ b/vignettes/cloud_native.Rmd
@@ -1,10 +1,10 @@
 ---
-title: "Using DuckDB and Arrow with piggyback"
+title: "Cloud native workflows with piggyback"
 output: rmarkdown::html_vignette
 author: "Tan Ho, Carl Boettiger"
 date: "2023-12-26"
 vignette: >
-  %\VignetteIndexEntry{Using DuckDB and Arrow with piggyback}
+  %\VignetteIndexEntry{Cloud native workflows with piggyback}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
@@ -44,7 +44,7 @@ on the remote data source to access only the subset of rows/columns they need.
 Subsetting data directly from a URL in this manner thus has the performance benefit 
 of reading directly into memory while also having the added benefit of allowing 
 more efficient and bigger-than-RAM workflows. This is sometimes referred to as 
-'cloud-native' reads.
+**cloud-native** workflows.
 
 ## nflverse play by play
 
@@ -173,12 +173,7 @@ DBI::dbGetQuery(conn = conn, query)
 #>  3   2023 ARI     no_play        48       0.191 
 #>  4   2023 ATL     pass          499      -0.0738
 #>  5   2023 ATL     run           465      -0.103 
-#>  6   2023 ATL     no_play        31       0.298 
-#>  7   2023 BAL     pass          480       0.0436
-#>  8   2023 BAL     run           475       0.0689
-#>  9   2023 BAL     no_play        45       0.246 
-#> 10   2023 BUF     pass          532       0.140 
-#> # ℹ 278 more rows
+#> # ℹ 283 more rows
 #> # ℹ Use `print(n = ...)` to see more rows
 
 tictoc::toc()
@@ -217,12 +212,7 @@ pbp |>
 #>  3   2023 ARI     no_play        48       0.191 
 #>  4   2023 ATL     pass          499      -0.0738
 #>  5   2023 ATL     run           465      -0.103 
-#>  6   2023 ATL     no_play        31       0.298 
-#>  7   2023 BAL     pass          480       0.0436
-#>  8   2023 BAL     run           475       0.0689
-#>  9   2023 BAL     no_play        45       0.246 
-#> 10   2023 BUF     pass          532       0.140 
-#> # ℹ 278 more rows
+#> # ℹ 283 more rows
 #> # ℹ Use `print(n = ...)` to see more rows
 tictoc::toc()
 #> 3.491 sec elapsed
@@ -232,12 +222,45 @@ Using duckdb certainly adds a little verbosity - in exchange, we've managed to
 query and summarize the 20+ parquet files summing 1M+ rows without having 
 to load it all into memory!
 
+### duckdbfs
+
+[duckdbfs](https://cran.r-project.org/package=duckdbfs) was developed to wrap 
+this latter workflow into a single function call that accepts a vector of URLs:
+```{r}
+library(duckdbfs)
+pbp <- duckdbfs::open_dataset(pbp_urls, filename = TRUE)
+tictoc::tic()
+pbp |> 
+  dplyr::filter(grepl("2021|2022|2023", filename), pass == 1 | rush == 1) |> 
+  dplyr::summarise(
+    n_plays = dplyr::n(),
+    epa_per_play = mean(epa, na.rm = TRUE),
+    .by = c(season, posteam, play_type)
+  ) |> 
+  dplyr::arrange(
+    desc(season), posteam, desc(n_plays)
+  ) |> 
+  dplyr::collect()
+#> # A tibble: 288 × 5
+#>    season posteam play_type n_plays epa_per_play
+#>     <int> <chr>   <chr>       <dbl>        <dbl>
+#>  1   2023 ARI     pass          539      -0.231 
+#>  2   2023 ARI     run           391       0.0351
+#>  3   2023 ARI     no_play        48       0.191 
+#>  4   2023 ATL     pass          499      -0.0738
+#>  5   2023 ATL     run           465      -0.103 
+#> # ℹ 283 more rows
+#> # ℹ Use `print(n = ...)` to see more rows
+tictoc::toc()
+#> 3.492 sec elapsed
+```
+
+<!--
 ## Arrow
 
 Note: Arrow doesn't yet support [HTTP querying](https://github.com/apache/arrow/issues/18980),
 although hopefully it will soon - if/when it does we'll update this vignette!
 
-<!--
 ```{r}
 library(piggyback)
 library(arrow)
